fix login spacing

--- a/frontend/src/app/login/login-panel/login-panel.component.scss
+++ b/frontend/src/app/login/login-panel/login-panel.component.scss
@@ -4,7 +4,7 @@
   background-color: white;
   color: $teal;
   padding: 1em;
-  width: 20vw;
+  width: 30vw;
   min-width: 20em;
   max-width: 20em;
   border-radius: 62px;
@@ -30,6 +30,7 @@ input {
 }
 
 .button-container {
+  margin: 1vh;
   text-align: center;
 }
 
